kubescript/deployKube/temp-2/deploy-apicreate.yaml

apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name:  apicreate
spec:
  selector:
    matchLabels:
      app:   apicreate
      tier:  api
  replicas: 
  template:
    metadata:
      labels:
        app:  apicreate
        tier: api
    spec:
      containers:
      - name:  apicreate
        image: acrforaksb.azurecr.io/repo/apicreate
        resources:
          requests:
            cpu: 20m
            memory: 60Mi
        ports:
        - containerPort: 7773
