kubescript/deployKube/temp-2/deploy-apiget.yaml

apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name:  apiget
spec:
  selector:
    matchLabels:
      app:   apiget
      tier:  api
  replicas: 
  template:
    metadata:
      labels:
        app:  apiget
        tier: api
    spec:
      containers:
      - name:  apiget
        image: acrforaksb.azurecr.io/repo/apiget
        resources:
          requests:
            cpu: 20m
            memory: 60Mi
        ports:
        - containerPort: 7771
