kubescript/deployKube/temp-2/lb-myapp-kubemysql.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app:  frontendkubemysql
    tier: frontend
  name: frontendkubemysql
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontendkubemysql
    tier: frontend
  type: LoadBalancer
