kubescript/deployKube/temp-2/service-apicreate.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app:  apicreate
    tier: api
  annotations:
    
  name: apicreate
spec:
  ports:
  - port: 7773
    protocol: TCP
    targetPort: 7773
  selector:
    app: apicreate
    tier: api
  type: ClusterIP
