kubescript/deployKube/temp-2/ingress-mvcmoviefrontend.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ssl-frontend-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - $frontFQDN 
    secretName: frontend-tls
  rules:
  - host: $frontFQDN 
    http:
      paths:
      - path: /
        backend:
          serviceName: mvcmoviefrontend
          servicePort: 80
